mega push di aggiornamento pre relazione presentazionev2

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,12 @@
 /SriptTrain/yolo11n.pt
 /MotionBlurRemoval.py
 /datasetWatches/
+/detection_mapping.json
+/retrain_log_20251104_121434.txt
+/Scriptino per presentazione.py
+/ScriptTrainPriority.py
+/training_log_20251104_114626.txt
+/training_log_20251104_120307.txt
+/yolo11n.pt
+/yolov8n.pt
+/PC_course_project_template.pdf
